# find-evil-agent

./: .env  .env.example  .gitignore  ADMIN_GUIDE.md  BROWSER_TEST_NOW.md  CLEANUP_SUMMARY.md  CODE_REVIEW.md  CODE_REVIEW_REPORT.md  DEMO_PACKAGE_README.md  DEMO_SCENARIOS.md  DEMO_STATUS.md  DEMO_TEST_SCENARIOS.md  DEMO_VIDEO_PLAN.md  DEMO_VIDEO_SCRIPT.md  DEVPOST_SUBMISSION.md  Dockerfile  Dockerfile.frontend  E2E_TEST_REPORT.md  E2E_TEST_RESULTS.md  E2E_TEST_RESULTS_MAY8.md  ELEVATOR_PITCH.md  HACKATHON_CRITICAL_GAPS.md  HITL_IMPLEMENTATION_SUMMARY.md  NEXT_STEPS_MAY8.md  PLAN_OF_ACTION.md  PRE_SUBMISSION_SUMMARY.md  QUICK_START_WEB.md  QUICK_STATUS.md  REACT_UI_COMPLETE.md  README.md  SCREENSHOT_GUIDE.md  SECURITY_AUDIT_MAY8.md  SIFT_VM_TEST_RESULTS.md  SUBMISSION_ASSESSMENT.md  SUBMISSION_PACKAGE.md  SWE_SPECIFICATION.md  SYSTEM_DESCRIPTION.md  SYSTEM_OVERVIEW.md  TESTING_GUIDE.md  USER_GUIDE.md  (+20 more)
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docs.yml  release.yml
DEMO_PACKAGE/: find-evil-agent-demo.webm
_hackathon_materials/: AI-Driven Digital Forensics Orchestration on SIFT.md  SIFT Workstation Model Context Protocol Setup Guide.md
_hackathon_materials/__MACOSX/: ._AI-Driven -Digital Forensics Orchestration on SIFT.md  ._AI-Driven Digital Forensics Orchestration on SIFT.md  ._FindEvil Agent.md  ._SIFT Workstation Model Context Protocol Setup Guide.md  ._SIFT and Claude Code Quick Start Guide.md  ._repomix-output-AppliedIR-Valhuntir.md  ._repomix-output-teamdfir-sift.md
demo_artifacts/: .gitignore  ANIMATED_GIF_GUIDE.md  DEMO_WALKTHROUGH.md  PLAYWRIGHT_AUTOMATION.md  QUICKSTART.md  README.md  SCREENSHOT_GUIDE.md  api_config.json  cli_output.txt  mcp_server_info.json  package-lock.json  package.json  playwright.config.ts  quick-start.sh  record-cli-api.sh
demo_artifacts/demo_final/: api_demo_output.txt  cli_demo_output.txt  demo_recording.webm
demo_artifacts/slides/: segment1_introduction.html  segment2_overview.html  segment4_cli_demo.html  segment5_api_demo.html  segment6_differentiators.html  segment7_closing.html
demo_artifacts/tests/: demo.spec.ts
demos/: README.md  auto_demo.py  hackathon_demo.py  quick_demo.sh
docs/: DEMO_TUTORIAL.md  STATUS_SUMMARY.md  SWE_GAP_ANALYSIS.md  USER_GUIDE.md  VALHUNTIR_COMPARISON.md  WEB_INTERFACE.md  architecture.md  components.md  configuration.md  contributing.md  examples.md  faq.md  getting-started.md  index.md  quick-start.md  release.md  results.md  testing.md  troubleshooting.md  usage.md  workflows.md
docs/api/: cli.md  mcp.md  python.md  rest.md
docs/archive/code-reviews/: CODE_REVIEW_FINDINGS.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_REPORT_bak.md  CONSOLIDATED_REVIEW_REPORT.md
docs/deployment/: llm-config.md  security.md  sift-setup.md
findevil/: AI-Driven -Digital Forensics Orchestration on SIFT.md  FindEvil Agent.md  SIFT and Claude Code Quick Start Guide.md  repomix-output-AppliedIR-Valhuntir.md  repomix-output-teamdfir-sift.md
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
scripts/: test-macos.sh
src/find_evil_agent/: __init__.py
src/find_evil_agent/agents/: __init__.py  analyzer.py  base.py  checkpointer.py  command_builder.py  executor.py  graph_builder.py  memory.py  orchestrator.py  report_schemas.py  reporter.py  schemas.py  tool_executor.py  tool_selector.py
src/find_evil_agent/api/: __init__.py  server.py
src/find_evil_agent/cli/: main.py
src/find_evil_agent/config/: __init__.py  settings.py
src/find_evil_agent/evidence/: __init__.py  manager.py  schemas.py
src/find_evil_agent/graph/: __init__.py  checkpoint.py  conditions.py  state.py  workflow.py
src/find_evil_agent/llm/: __init__.py  factory.py  protocol.py  schema_utils.py
src/find_evil_agent/mcp/: README.md  __init__.py  __main__.py  client.py  prompts.py  resources.py  server.py  tools.py
src/find_evil_agent/parsers/: __init__.py  base.py  factory.py  grep.py  strings.py  timeline.py  tsk.py  volatility.py
src/find_evil_agent/security/: __init__.py  validators.py
src/find_evil_agent/telemetry/: __init__.py
src/find_evil_agent/tools/: __init__.py  errors.py  registry.py
src/find_evil_agent/web/: __init__.py  gradio_app.py
submission_logs/: README.md  cli_output.txt  execution_events.jsonl
templates/: report.html.j2  report_graph_template.html
tests/: test_parsers.py
tests/agents/: test_command_builder.py
tests/api/: test_api_auth.py  test_api_cors_and_bounds.py  test_api_endpoints_basic.py  test_api_error_responses.py  test_api_model_selector.py  test_api_session_id_uuid.py
tests/integration/: test_sift_vm_smoke.py
tests/integration/llm/: test_ollama_live.py
tests/mcp/: test_mcp_module_split.py  test_mcp_path_validation.py  test_mcp_server.py
tests/security/: test_validators.py
tests/unit/agents/: test_analyzer.py  test_analyzer_bytes_guard.py  test_base_agent_llm.py  test_orchestrator.py  (+11 more)
tests/web/: test_gradio_model_selector.py
tools/: metadata.yaml
(+34 files in other folders)
