[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "find-evil-agent"
version = "0.1.0"
description = "Autonomous AI incident response agent for SANS SIFT Workstation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Ifiok Moses", email = "ifiok.moses@strayer.edu"}
]
keywords = ["cybersecurity", "dfir", "ai-agent", "mcp", "sift-workstation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Framework
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # LLM Providers
    "openai>=1.0.0",
    "anthropic>=0.40.0",

    # MCP Protocol (Model Context Protocol)
    "mcp>=1.0.0",
    
    # CLI and Interface
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",

    # API
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",

    # Web UI
    "gradio>=5.0.0",

    # Configuration & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # HTTP Client for API calls
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    
    # Async Support
    "anyio>=4.0.0",

    # SSH for SIFT VM connection
    "asyncssh>=2.14.0",

    # Observability & Logging
    "structlog>=24.0.0",
    "prometheus-client>=0.19.0",
    
    # Embedding & Semantic Search (for Tool Selection)
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "orjson>=3.9.0",

    # Report Generation
    "weasyprint>=68.0",

    # Observability
    "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.2.0",
    "pytest-mock>=3.12.0",
    
    # Code Quality
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-autorefs>=0.5.0",
    
    # Development Tools
    "ipython>=8.18.0",
    "jupyter>=1.0.0",
]

[project.scripts]
find-evil = "find_evil_agent.cli.main:app"
findevil = "find_evil_agent.cli.main:app"

[project.urls]
"Homepage" = "https://github.com/ifiokmoses/find-evil-agent"
"Bug Reports" = "https://github.com/ifiokmoses/find-evil-agent/issues"
"Source" = "https://github.com/ifiokmoses/find-evil-agent"
"Documentation" = "https://ifiokmoses.github.io/find-evil-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/find_evil_agent"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ASYNC", # flake8-async
]
ignore = [
    "E501",  # Line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "S106"]  # Allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_configs = true
show_column_numbers = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests related to security features",
    "mcp: marks tests related to MCP protocol",
]
asyncio_mode = "auto"
timeout = 60

[tool.coverage.run]
source = ["src/find_evil_agent"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B601"]  # Skip assert and wildcard import checks in tests
